Changed html and added styles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ghpages test</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga iure alias obcaecati expedita sint et, consectetur recusandae optio distinctio culpa fugit quasi, fugiat, accusantium nulla, in odio minus quidem beatae!</p>
